--- a/index.html
+++ b/index.html
@@ -70,75 +70,63 @@
     <div class="container">
       <textarea name="" id="myInput0" cols="90" rows="10">
         #include<GL/glut.h>
-#include<stdio.h>
+#include <GL/freeglut.h>
+#include <stdio.h>
+
 int x1, y1, x2, y2;
- 
-void draw_pixel(int x, int y)
-{
-        glColor3f(1.0,0.0,0.0);
-        glBegin(GL_POINTS);
-        glVertex2i(x, y);
-        glEnd();
+
+void setPixel(int x, int y) {
+    glBegin(GL_POINTS);
+    glVertex2i(x, y);
+    glEnd();
 }
- 
-void brenhams_line_draw(int x1, int y1, int x2, int y2)
-{
-        int dx=x2-x1,dy=y2-y1;
-        int p=2*dy*dx;
-        int twoDy=2*dy;
-        int twoDyMinusDx=2*(dy-dx); // paranthesis are required
-        int x=x1,y=y1;
-        if(dx<0)
-        {
-        x=x2;
-y=y2;
-        x2=x1;
-        }
-        draw_pixel(x, y);
-        while(x<x2)
-        {
-        x++;
-        if(p<0)
-        p+=twoDy;
-        else
-        {
-        y++;
-        p+=twoDyMinusDx;
-        }
-        draw_pixel(x, y);
+
+void drawLine(int x1, int y1, int x2, int y2) {
+    int dx = abs(x2 - x1), dy = abs(y2 - y1);
+    int sx = (x1 < x2) ? 1 : -1, sy = (y1 < y2) ? 1 : -1;
+    int err = dx - dy, e2;
+
+    while (1) {
+        setPixel(x1, y1);
+        if (x1 == x2 && y1 == y2) break;
+        e2 = err * 2;
+        if (e2 > -dy) { err -= dy; x1 += sx; }
+        if (e2 < dx) { err += dx; y1 += sy; }
+    }
 }
+
+void display() {
+    glClear(GL_COLOR_BUFFER_BIT);
+    glColor3f(1.0, 1.0, 1.0);
+    drawLine(x1, y1, x2, y2);
+    glFlush();
 }
-void myInit()
-{
-        glClearColor(0.0,0.0,0.0,1.0);
-        glMatrixMode(GL_PROJECTION);
-        glLoadIdentity();
-        gluOrtho2D(0.0, 500.0, 0.0, 500.0);
-        glMatrixMode(GL_MODELVIEW);
+
+void reshape(int w, int h) {
+    glViewport(0, 0, w, h);
+    glMatrixMode(GL_PROJECTION);
+    glLoadIdentity();
+    gluOrtho2D(0, w, 0, h);
+    glMatrixMode(GL_MODELVIEW);
+    glLoadIdentity();
 }
- 
-void display()
-{
-        glClear(GL_COLOR_BUFFER_BIT);
-        brenhams_line_draw(x1, y1, x2, y2);
-        glFlush();
+
+int main(int argc, char** argv) {
+    printf("Enter the coordinates of two points (x1, y1) and (x2, y2): ");
+    scanf("%d %d %d %d", &x1, &y1, &x2, &y2);
+
+    glutInit(&argc, argv);
+    //glutInitDisplayMode(GLUT_SINGLE | GLUT_RGB);
+    glutInitWindowSize(800, 600);
+    glutInitWindowPosition(100, 100);
+    glutCreateWindow("Bresenham's Line Drawing");
+    glClearColor(0.0, 0.0, 0.0, 1.0);
+    glutDisplayFunc(display);
+    glutReshapeFunc(reshape);
+    glutMainLoop();
+    return 0;
 }
- 
-int main(int argc, char **argv)
-{
-        printf( "Enter Start Points (x1,y1)\n");
-        scanf("%d %d", &x1, &y1);
- printf( "Enter End Points (x2,y2)\n");
-        scanf("%d %d", &x2, &y2);
-        glutInit(&argc, argv);
-        glutInitDisplayMode(GLUT_SINGLE|GLUT_RGB);
-        glutInitWindowSize(500, 500);
-        glutInitWindowPosition(0, 0);
-        glutCreateWindow("Bresenham's Line Drawing");
-        myInit();
-        glutDisplayFunc(display);
-        glutMainLoop();
-}
+
               </textarea>
               
     </div>
