--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@ cv2.destroyAllWindows()
 <!-- footer section start -->
 <footer>
 
-          <span>Az<a href="https://azlan.engineer/">lan</a> | <span >&#169;</span> 2022 |<small> in collab with <a href="https://github.com/shabnazakthar"> Shabnaz</a><small></span>
+          <span>Az<a href="https://azlan.engineer/">lan</a> | <span >&#169;</span> 2022 |<small> in collab with <a href="https://github.com/shabnazakthar"> Thameem</a><small></span>
   <div class="linkicon">
 
 
